force-app/main/default/objects/Case/fields/Affected_User__c.field-meta.xml
<CustomField>
    <fullName>Affected_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PGP-0021 - This field stores affected user Id.</description>
    <label>Affected User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>