force-app/main/default/objects/Case/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <description>PGP-0028 - Stores Shipping Address Information</description>
    <label>Shipping Address</label>
    <type>Address</type>
</CustomField>