force-app/main/default/objects/Case/fields/Shipping_Priority__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Priority__c</fullName>
    <description>PGP-0028 - Stores Shipping Priority For Shipping Case</description>
    <label>Shipping Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>