force-app/main/default/objects/Case/fields/Task_Count__c.field-meta.xml
<CustomField>
    <fullName>Task_Count__c</fullName>
    <description>PGP-0025 - Stores number of associated task to the Case.</description>
    <label>Task Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>