force-app/main/default/objects/Case/recordTypes/Salesforce_Help_Desk.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Help_Desk</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <description>PGP-0021 : Internal Salesforce Support</description>
    <label>Salesforce Help Desk</label>
</RecordType>