force-app/main/default/objects/Case/recordTypes/Standard_Support.recordType-meta.xml
<RecordType>
    <fullName>Standard_Support</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <description>PGP-0021 - Unversal Container Customer Facing Request</description>
    <label>Standard Support</label>
</RecordType>